Clean up of ApplicationUI code

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -4,3 +4,8 @@
 /ApplicationUI$4.class
 /ApplicationUI$5.class
 /ApplicationUI$6.class
+/MyMenuBar.class
+/Test.class
+/MyMazePanel.class
+/InfoPanel.class
+/MyInfoPanel.class
