Menu Events finally WORKING! WOOOOOO

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -9,3 +9,14 @@
 /MyMazePanel.class
 /InfoPanel.class
 /MyInfoPanel.class
+/MyMenuBar$1.class
+/MyMenuBar$2.class
+/MyMenuBar$3.class
+/MyMenuBar$4.class
+/MyMenuBar$5.class
+/MyMenuBar$6.class
+/MyMenuBar$7.class
+/MyMenuBar$8.class
+/MenuBarEvent.class
+/MenuBarListener.class
+/override.class
