--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,6 +1,1 @@
-/ApplicationUI$2.class
-/ApplicationUI$3.class
-/MyStartPanel.class
-/MyStartPanel$1.class
-/ApplicationUI$4.class
-/ApplicationUI$1.class
+/MyMenuBar$9.class
